# agenc-protocol

./: .gitignore  .gitleaks.toml  Anchor.toml  CHANGELOG.md  PLAN.md  PLAN_2.md  README.md  SECURITY.md  TODO.MD  coverage-policy.json  deny.toml  fixme.md  package-lock.json  package.json  release-train.json
.changeset/: batch-4-goods.md  bright-listings-prepare.md  p5-3-watch-claimable-tasks.md  phase1-sdk-runtime-core.md  phase2-test-mode-sandbox.md  phase3-data-plane.md  phase4-marketplace-react.md  phase5-watch-claimable.md  phase7-content-rails.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  compatibility.yml  coverage.yml  idl-drift.yml  react-fixtures.yml  release.yml  rust-supply-chain.yml  sandbox-nightly.yml  sdk.yml  supply-chain.yml  verify.yml
.well-known/: security.txt
artifacts/anchor/: manifest.json
artifacts/devnet-readiness/: RELEASE1_PUBLIC_LAUNCH_REVIEW_20260327.md  VALIDATION_DEPLOYMENT_EXECUTED_20260327.md  VALIDATION_DEPLOYMENT_READY_20260327.md  VALIDATION_DEPLOYMENT_SPEC_20260327.md  readiness-baseline.json  (+3 more)
docs/: A6_WSH_BATCH2_ADDENDA.md  AGENT_METADATA.md  ARTIFACT_PIPELINE.md  BATCH1_AUDIT_PREP.md  BATCH_1_3_AUDIT_PREP.md  BUG_BOUNTY.md  CODEBASE_MAP.md  CREDIBLE_EXIT.md  DESIGN_DECISIONS.md  DISPUTE_CHALLENGE_WINDOW.md  DOCS_INDEX.md  ENCRYPTED_DELIVERY_L2.md  ENGAGEMENTS_DESIGN.md  ENTERPRISE_READINESS.md  F6_INTEROP_ASSESSMENT.md  JOB_SPEC_REQUIRED_FLAG_DECISION.md  LISTING_METADATA.md  LOCALNET.md  MAINNET_MAINLINE.md  MAINNET_ROLLOUT_RUNBOOK.md  MARKETPLACE_EMBED_UPGRADE_SPEC.md  MARKETPLACE_V2_BID_PROTOCOL.md  MARKETPLACE_V2_DEVNET_READINESS_MATRIX.md  MILESTONES_DESIGN.md  MODERATION_LIVENESS.md  MODERATION_NEUTRALITY.md  P1_2_OPEN_ROSTER_SPEC.md  P3_6_REFERRER_BEYOND_CREATORREVIEW.md  P5_2_STORE_IDENTITY_SPEC.md  P5_3_REFERRAL_ATTRIBUTION_SPEC.md  P6_4_SPAM_SYBIL_DESIGN.md  POLICY_CHANGES.md  PROGRAM_SURFACE.md  REVISION_5_CUTOVER.md  SCALE_COST_MODEL.md  SDK_AUTOMATION_PLAN.md  TASK_VALIDATION_V2.md  UPGRADE_AUTHORITY.md  VALIDATION.md  VERIFIABLE_BUILDS.md  (+6 more)
migrations/: README.md  migration_utils.ts  v1_to_v2.rs
programs/agenc-coordination/: Cargo.toml  README.md
programs/agenc-coordination/fuzz/: Cargo.toml
programs/agenc-coordination/fuzz/fuzz_targets/: bid_marketplace.rs  claim_task.rs  complete_task.rs  dependency_graph.rs  dispute_lifecycle.rs  dispute_timing.rs  mod.rs  purchase_good.rs  resolve_dispute.rs  task_lifecycle.rs  vote_dispute.rs
programs/agenc-coordination/fuzz/src/: arbitrary.rs  invariants.rs  lib.rs  main.rs  scenarios.rs
programs/agenc-coordination/src/: errors.rs  events.rs  lib.rs  private_completion_payload.rs  state.rs
programs/agenc-coordination/src/instructions/: accept_direct_assignment.rs  accept_task_result.rs  agent_stats_helpers.rs  apply_dispute_slash.rs  apply_initiator_slash.rs  assign_dispute_resolver.rs  assign_moderation_attestor.rs  attestor_exit.rs  auto_accept_task_result.rs  bid_marketplace.rs  bid_settlement_helpers.rs  bond_helpers.rs  cancel_dispute.rs  cancel_proposal.rs  cancel_task.rs  claim_task.rs  close_task.rs  complete_task.rs  complete_task_private.rs  completion_helpers.rs  configure_task_moderation.rs  configure_task_validation.rs  constants.rs  create_dependent_task.rs  create_goods_listing.rs  create_proposal.rs  create_service_listing.rs  create_task.rs  create_task_humanless.rs  delegate_reputation.rs  deregister_agent.rs  dispute_helpers.rs  distribute_ghost_share.rs  execute_proposal.rs  expire_claim.rs  expire_dispute.rs  hire_from_listing.rs  hire_from_listing_humanless.rs  initialize_governance.rs  initialize_protocol.rs  (+68 more)
programs/agenc-coordination/src/utils/: borsh.rs  compute_budget.rs  mod.rs  multisig.rs  validation.rs  version.rs
schemas/: agent-metadata.schema.json
scripts/: anchor-idl-publication.mjs  anchor-idl-publication.test.mjs  audit-tests-integration.mjs  canary-idl-baseline.json  check-canary-idl.mjs  check-coverage.mjs  check-coverage.test.mjs  check-idl-reference.mjs  check-mainnet-program-artifacts.mjs  check-npm-install-scripts.mjs  check-npm-install-scripts.test.mjs  check-npm-licenses.mjs  check-npm-licenses.test.mjs  check-rust-supply-chain-policy.mjs  check-stack-frames.mjs  coverage-workflow.test.mjs  credible-exit.mjs  devnet-deploy.md  enterprise-readiness.mjs  enterprise-readiness.test.mjs  env-flags.mjs  env-flags.test.mjs  generate-idl-reference.mjs  goods-purchase-watcher.mjs  localnet-down.mjs  localnet-guarded-spawn.mjs  localnet-lifecycle-lock.mjs  localnet-marketplace-policy.mjs  localnet-process-identity.mjs  localnet-process-identity.test.mjs  localnet-process-signal.mjs  localnet-program-binding.mjs  localnet-program-snapshot.mjs  localnet-record-attestor.mjs  localnet-status.mjs  localnet-up.mjs  localnet-validator-launch.mjs  mainnet-fee-change.mjs  mainnet-init-and-stamp-boundary.test.mjs  mainnet-init-and-stamp.mjs  (+82 more)
supply-chain/: npm-license-policy.json  rust-policy.json
tests-integration/: SECURITY.md  accepted-bid-terminal.test.mjs  admin-config.test.mjs  agent-social.test.mjs  agent-track-record.test.mjs  agent-verification.test.mjs  atomic-release-stamp.test.mjs  batch2-surface.test.mjs  bid-extra.test.mjs  bid-fixture.mjs  bond-forfeit-binding.test.mjs  c8-low-batch.test.mjs  canary-surface.test.mjs  canary-timeout-accept.test.mjs  cancel-claim-close.test.mjs  close-task-bid-guard.test.mjs  close-task-repeat.test.mjs  completing-accept-orphan.test.mjs  contest-fix-round.test.mjs  contest-ghost.test.mjs  delegation-guards.test.mjs  dependent-legacy-parent.test.mjs  dependent-proof.test.mjs  dispute-accountable-ruling.test.mjs  dispute-counter-drift.test.mjs  dispute-submission-sweep.test.mjs  dispute-vote-retired.test.mjs  expire-refund-default.test.mjs  goods-rehearsal.test.mjs  goods.test.mjs  governance.test.mjs  harness.mjs  initialize-protocol.test.mjs  initiator-slash-guard.test.mjs  listing-mod-dispute.test.mjs  listing-state-upload-race.test.mjs  marketplace.test.mjs  moderation-attestor.test.mjs  open-roster.test.mjs  package-lock.json  (+18 more)
zkvm/: Cargo.toml
(+21 files in other folders)
