[package]
name = "agenc-coordination"
version = "0.1.0"
description = "AgenC Decentralized Agent Coordination Protocol for Solana"
edition = "2021"
rust-version = "1.79"
license = "GPL-3.0-only"
repository = "https://github.com/tetsuo-ai/agenc-protocol"

[lib]
name = "agenc_coordination"
crate-type = ["cdylib"]

[features]
default = ["private-zk", "spl-token-rewards"]
mainnet-canary = []
private-zk = ["solana-sha256-hasher"]
spl-token-rewards = [
    "anchor-spl",
    "anchor-spl/token",
    "anchor-spl/token_2022",
    "anchor-spl/associated_token",
]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl?/idl-build"]
init-if-needed = []
validation-timings = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", default-features = false, optional = true }

# MSRV compatibility: Solana BPF toolchain uses rustc 1.79.0-dev
# indexmap 2.12.1+ requires rustc 1.82, so pin to last compatible version
indexmap = "=2.12.0"

# Latest getrandom release on the 0.2.x line that still supports SBPF custom RNG hooks.
getrandom = { version = "=0.2.17", default-features = false, features = ["custom"] }

# SHA-256 journal digest hashing for verifier-router integration
solana-sha256-hasher = { version = "3.1.0", optional = true }

[target.'cfg(target_os = "solana")'.dependencies]
getrandom = { version = "=0.2.17", default-features = false, features = ["custom"] }

# Defense-in-depth: the Rust release profile defaults overflow-checks = false, so any
# integer add/sub/mul not written with checked_*/saturating_* would SILENTLY WRAP in the
# deployed SBF program. All money paths already use checked arithmetic; this is the second
# layer the Solana program-security guidance + Anchor recommend alongside it. This crate is
# the Cargo build root (the [workspace] table below is empty, so it stays a single-member
# root — see the cargo metadata check), and its [profile] is honored.
[profile.release]
overflow-checks = true

# Single-member Cargo workspace rooted at this crate. The ONLY reason this empty
# [workspace] table exists is to host [workspace.metadata.cli] below: solana-verify (the
# reproducible-build tool, docs/VERIFIABLE_BUILDS.md) reads [workspace.metadata.cli].solana
# to pick the deterministic Docker build image's Solana CLI version. Without it, the tool
# falls back to the Cargo.lock solana-program entry (currently 2.3.0, a transitive dep), NOT
# the toolchain this program is actually deployed with. Pin it to the Anchor.toml
# solana_version (3.0.13) so the verifiable build uses the same toolchain as the live deploy.
# Keep this in sync with Anchor.toml [toolchain] solana_version.
[workspace]

[workspace.metadata.cli]
solana = "3.0.13"
