[package]
name = "agenc-coordination"
version = "0.1.0"
description = "AgenC Decentralized Agent Coordination Protocol for Solana"
edition = "2021"
rust-version = "1.79"
license = "GPL-3.0-only"
repository = "https://github.com/tetsuo-ai/agenc-protocol"

[lib]
name = "agenc_coordination"
crate-type = ["cdylib"]

[features]
# Production surface: private proof settlement is quarantined until an audited
# guest and the pinned verifier/router programs exist on mainnet.  It must be
# enabled explicitly for development builds.
default = ["spl-token-rewards"]
mainnet-canary = []
private-zk = []
spl-token-rewards = [
    "anchor-spl",
    "anchor-spl/token",
    "dep:spl-associated-token-account-client",
]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# Anchor SPL 0.32's IDL emitter references `token_interface` unconditionally.
# Enable its Token-2022 module only while compiling IDL metadata; the production
# SBF build does not enable `idl-build` and remains classic-SPL-only.
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "anchor-spl/token",
    "anchor-spl/token_2022",
]
init-if-needed = []
validation-timings = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", default-features = false, optional = true }
# Instruction/address-only ATA client. Using Anchor SPL's `associated_token`
# feature pulls the complete Token-2022 program, confidential-transfer proofs,
# and ZK/ElGamal stack into the default classic-SPL dependency graph even though
# this program only constructs one classic ATA creation instruction.
spl-associated-token-account-client = { version = "=2.0.0", optional = true }

# MSRV compatibility: Solana BPF toolchain uses rustc 1.79.0-dev
# indexmap 2.12.1+ requires rustc 1.82, so pin to last compatible version
indexmap = "=2.12.0"

# SHA-256 hashing is shared by the verifier journal and the full-surface bid
# acceptance CAS. Keep it available even when `private-zk` is disabled so a
# no-default-features full build cannot silently lose bid-term commitments.
solana-sha256-hasher = { version = "=2.3.0", features = ["sha2"] }

# Defense-in-depth: the Rust release profile defaults overflow-checks = false, so any
# integer add/sub/mul not written with checked_*/saturating_* would SILENTLY WRAP in the
# deployed SBF program. All money paths already use checked arithmetic; this is the second
# layer the Solana program-security guidance + Anchor recommend alongside it. This crate is
# the Cargo build root (the [workspace] table below is empty, so it stays a single-member
# root — see the cargo metadata check), and its [profile] is honored.
[profile.release]
overflow-checks = true
# Size optimization for the on-chain .so. Program size = permanent rent
# (~6960 lamports/byte), so shrinking the binary directly cuts deploy/upgrade
# cost. These are codegen-only: source semantics are unchanged and the
# overflow-checks money-safety layer above stays on. Verified behavior-identical
# against the full gate (Rust unit + litesvm + compute-unit budgets). Keep these
# in the committed profile so solana-verify reproducible builds match the
# deployed bytecode.
opt-level = "z"
lto = "fat"
codegen-units = 1

# Single-member Cargo workspace rooted at this crate. The ONLY reason this empty
# [workspace] table exists is to host [workspace.metadata.cli] below: solana-verify (the
# reproducible-build tool, docs/VERIFIABLE_BUILDS.md) reads [workspace.metadata.cli].solana
# to pick the deterministic Docker build image's Solana CLI version. Without it, the tool
# falls back to the Cargo.lock solana-program entry (currently 2.3.0, a transitive dep), NOT
# the toolchain this program is actually deployed with. Pin it to the Anchor.toml
# solana_version (3.0.13) so the verifiable build uses the same toolchain as the live deploy.
# Keep this in sync with Anchor.toml [toolchain] solana_version.
[workspace]

[workspace.metadata.cli]
solana = "3.0.13"
